tests/ui/const-generics/bad-subst-const-kind.stderr
error[E0277]: the trait bound `[u8; 13]: Q` is not satisfied
  --> $DIR/bad-subst-const-kind.rs:13:24
   |
LL | pub fn test() -> [u8; <[u8; 13] as Q>::ASSOC] { todo!() }
   |                        ^^^^^^^^ the trait `Q` is not implemented for `[u8; 13]`
   |
   = help: the trait `Q` is implemented for `[u8; N]`

error[E0308]: mismatched types
  --> $DIR/bad-subst-const-kind.rs:8:31
   |
LL | impl<const N: u64> Q for [u8; N] {
   |                               ^ expected `usize`, found `u64`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
